--- a/wp-content/themes/defense360/assets/_scss/base/_typography.scss
+++ b/wp-content/themes/defense360/assets/_scss/base/_typography.scss
@@ -26,52 +26,55 @@ h6 {
 }
 
 %h1 {
+  margin: 0.25rem 0 0;
+  color: variables.$black;
   font-family: variables.$font__ExpoSerif;
-  @include mixins.fontSize(28px);
   font-weight: 600;
   line-height: 1.25;
-  color: variables.$black;
-  margin: 0.25rem 0 0 0;
+  @include mixins.fontSize(28px);
 }
 
 %h2 {
-  font-family: variables.$font__ExpoSerif;
-  @include mixins.fontSize(24px);
-  line-height: 1.3;
-  font-weight: 600;
-  color: variables.$black;
   margin: 2rem 0 1rem;
+  color: variables.$black;
+  font-family: variables.$font__ExpoSerif;
+  font-weight: 600;
+  line-height: 1.3;
+  @include mixins.fontSize(24px);
 }
 
 %h3 {
-  font-family: variables.$font__ExpoSerif;
-  @include mixins.fontSize(22px);
-  line-height: 1.5;
-  font-weight: normal;
-  color: variables.$black;
   margin: 1.5rem 0 0.5rem;
+  color: variables.$black;
+  font-family: variables.$font__ExpoSerif;
+  font-weight: normal;
+  line-height: 1.5;
+  @include mixins.fontSize(22px);
 }
 
 %h4 {
-  font-family: variables.$font__SourceSans;
-  @include mixins.fontSize(18px);
-  font-style: italic;
-  font-weight: normal;
-  color: variables.$dark-gray;
-  letter-spacing: 0.4px;
   margin: 1rem 0;
+  color: variables.$dark-gray;
+  font-family: variables.$font__SourceSans;
+  font-weight: normal;
+  font-style: italic;
+  letter-spacing: 0.4px;
+  @include mixins.fontSize(18px);
 }
 
 .entry-content {
   h1:not([class]) {
     @extend %h1;
   }
+
   h2:not([class]) {
     @extend %h2;
   }
+
   h3:not([class]) {
     @extend %h3;
   }
+
   h4:not([class]) {
     @extend %h4;
   }
@@ -87,10 +90,10 @@ p {
 }
 
 hr {
-  background-color: variables.$color__background-hr;
-  border: 0;
   height: 1px;
   margin-bottom: 1.5em;
+  background-color: variables.$color__background-hr;
+  border: 0;
 }
 
 b,
@@ -113,8 +116,8 @@ blockquote,
 q {
   quotes: "" "";
 
-  &:before,
-  &:after {
+  &::before,
+  &::after {
     content: "";
   }
 }
@@ -124,14 +127,14 @@ address {
 }
 
 pre {
-  background: variables.$color__background-pre;
-  font-family: variables.$font__pre;
-  @include mixins.fontSize(14px);
-  line-height: variables.$font__line-height-pre;
-  margin-bottom: 1.6em;
   max-width: 100%;
-  overflow: auto;
+  margin-bottom: 1.6em;
   padding: 1.6em;
+  overflow: auto;
+  font-family: variables.$font__pre;
+  line-height: variables.$font__line-height-pre;
+  background: variables.$color__background-pre;
+  @include mixins.fontSize(14px);
 }
 
 code,
@@ -150,8 +153,8 @@ acronym {
 
 mark,
 ins {
-  background: variables.$color__background-ins;
   text-decoration: none;
+  background: variables.$color__background-ins;
 }
 
 big {
@@ -169,14 +172,17 @@ a {
   &:visited {
     color: variables.$color__link-visited;
   }
+
   &:hover,
   &:focus,
   &:active {
     color: variables.$color__link-hover;
   }
+
   &:focus {
     outline: thin dotted;
   }
+
   &:hover,
   &:active {
     outline: 0;
@@ -196,29 +202,29 @@ a {
 
   &::before,
   &::after {
-    content: "";
     position: absolute;
-    height: 2px;
-    width: 100%;
     top: 50%;
     left: 0;
+    width: 100%;
+    height: 2px;
     margin-top: -1px;
     background: variables.$black;
+    content: "";
   }
 
   &::before {
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+    transform: rotate(45deg);
+    transform: rotate(45deg);
+    transform: rotate(45deg);
     transform: rotate(45deg);
   }
 
   &::after {
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -ms-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    transform: rotate(-45deg);
     transform: rotate(-45deg);
   }
 }
