--- a/wp-content/themes/defense360/assets/_scss/components/_autocomplete.scss
+++ b/wp-content/themes/defense360/assets/_scss/components/_autocomplete.scss
@@ -9,17 +9,17 @@
 ============================================*/
 .aa-dropdown-menu .aa-suggestion em {
     color: $bright-green !important;
-    background: color.adjust($dark-green, $alpha: -0.9) !important;
     font-style: normal;
+    background: color.adjust($dark-green, $alpha: -0.9) !important;
 }
 
 .aa-dropdown-menu .aa-suggestion .suggestion-post-content em {
     padding: 0 0 1px;
+    color: inherit;
     background: inherit;
     box-shadow: inset 0 -2px 0 0 rgba($bright-green,.8) !important;
-    color: inherit;
 }
 
 .aa-dropdown-menu .suggestion-post-thumbnail {
-	border-radius: 0px !important;
+	border-radius: 0 !important;
 }
