--- a/wp-content/themes/defense360/assets/_scss/pages/_posts.scss
+++ b/wp-content/themes/defense360/assets/_scss/pages/_posts.scss
@@ -9,8 +9,8 @@
 /*----------  Single Posts  ----------*/
 .single-post .post {
   .entry-header {
-    text-align: center;
     margin-bottom: 1rem;
+    text-align: center;
 
     @include breakpoint("medium") {
       margin-bottom: 2rem;
@@ -40,6 +40,7 @@
     .post-thumbnail.isHomepage {
       padding-right: 1rem;
     }
+
     .post-content.isHomepage {
       padding-left: 1rem;
     }
@@ -57,9 +58,9 @@
     margin-bottom: 0.5rem;
 
     .post-contentCategoriesContainer {
+      color: $gray;
       text-transform: uppercase;
       @include fontSize(14px);
-      color: $gray;
 
       .post-contentType {
         a {
@@ -83,12 +84,12 @@
     }
 
     .entry-title {
+      margin: 0.25rem 0 0;
+      color: $black;
       font-family: $font__ExpoSerif;
-      @include fontSize(28px);
       font-weight: 600;
       line-height: 1.35;
-      color: $black;
-      margin: 0.25rem 0 0 0;
+      @include fontSize(28px);
 
       a {
         color: $black;
@@ -112,24 +113,24 @@
     }
 
     img {
+      width: 100vw;
       height: auto;
       margin-top: 2rem;
-      margin-left: -1rem;
       margin-right: -1rem;
-      width: 100vw;
+      margin-left: -1rem;
 
       @include breakpoint($size__content-max-width) {
         width: 100%;
-        margin-left: auto;
         margin-right: auto;
+        margin-left: auto;
       }
     }
 
     .post-series {
-      color: $gray;
-      @include fontSize(22px);
       margin: 0;
+      color: $gray;
       font-weight: normal;
+      @include fontSize(22px);
 
       a {
         color: $gray;
@@ -148,13 +149,13 @@
     }
 
     .download {
-      background-color: $dark-green;
+      display: table;
+      margin: 1.5rem auto;
+      padding: 0.5rem 3rem;
       color: $light-gray;
       text-transform: uppercase;
+      background-color: $dark-green;
       @include fontSize(14px);
-      padding: 0.5rem 3rem;
-      margin: 1.5rem auto;
-      display: table;
 
       @include breakpoint("medium") {
         margin: 1rem auto;
@@ -223,13 +224,13 @@
 
   /*----------  Post Authors  ----------*/
   .post-authorContainer {
-    background-color: $light-gray;
     padding: 1rem;
+    background-color: $light-gray;
 
     img {
       width: 100%;
-      height: auto;
       max-width: 100px;
+      height: auto;
       border-radius: 50%;
     }
 
@@ -248,17 +249,17 @@
 
   /*----------  Post Thumbnails  ----------*/
   .post-thumbnailContainer {
-    max-width: 100vw;
-    margin-bottom: 0.5rem;
     width: 100vw;
-    margin-left: -1rem;
+    max-width: 100vw;
     margin-right: -1rem;
+    margin-bottom: 0.5rem;
+    margin-left: -1rem;
 
     @include breakpoint("medium") {
-      max-width: 100%;
       width: initial;
-      margin-left: initial;
+      max-width: 100%;
       margin-right: initial;
+      margin-left: initial;
     }
 
     // Secondary Feature
@@ -267,19 +268,19 @@
     }
 
     img {
-      height: auto;
       width: 100%;
+      height: auto;
     }
   }
 
   /*----------  Full Width Content  ----------*/
   .fullWidthFeatureContent {
-    width: 100vw;
     position: relative;
-    left: 50%;
     right: 50%;
-    margin-left: -50vw;
+    left: 50%;
+    width: 100vw;
     margin-right: -50vw;
+    margin-left: -50vw;
     text-align: center;
 
     .fullWidthInner {
