--- a/wp-content/themes/defense360/assets/_scss/abstracts/_variables.scss
+++ b/wp-content/themes/defense360/assets/_scss/abstracts/_variables.scss
@@ -29,7 +29,7 @@ $color__link: $bright-green;
 $color__link-visited: $bright-green;
 $color__link-hover: $dark-green;
 $color__text-main: $dark-gray;
-$color__text-nav: $archive-filter-gray;
+$color__text-light: $archive-filter-gray;
 $color__text-copyright: #8c898c;
 
 $color__border-input: #ccc;
