--- a/wp-content/themes/defense360/assets/_scss/layout/_footer.scss
+++ b/wp-content/themes/defense360/assets/_scss/layout/_footer.scss
@@ -10,6 +10,8 @@ footer.site-footer {
 	margin-top: 3rem;
 	padding-top: 3rem;
 	border-top: 2px solid $light-gray;
+	background-color: $dark-green;
+	color: $color__text-light;
 
 	.footer-logoContainer {
 		margin-bottom: 0.5rem;
@@ -44,7 +46,7 @@ footer.site-footer {
 		}
 
 		a {
-			color: $dark-gray;
+			color: $color__text-light;
 
 			&:hover {
 				color: $bright-green;
