--- a/wp-content/themes/defense360/assets/_scss/base/_base.scss
+++ b/wp-content/themes/defense360/assets/_scss/base/_base.scss
@@ -22,9 +22,9 @@ body {
 #content {
 	margin-top: 100px;
 
-	@include breakpoint("medium") {
-		margin-top: 0;
-	}
+	// @include breakpoint("medium") {
+	// 	margin-top: 0;
+	// }
 }
 
 .content-wrapper {
