--- a/wp-content/themes/defense360/assets/_scss/layout/_header.scss
+++ b/wp-content/themes/defense360/assets/_scss/layout/_header.scss
@@ -8,7 +8,7 @@
 ==============================*/
 
 header.site-header {
-	z-index:50;
+	z-index: 50;
 	width: 100%;
 	margin-bottom: 2rem;
 	padding-top: 2rem;
@@ -16,18 +16,68 @@ header.site-header {
 	background-color: $dark-green;
 
 	@include breakpoint("medium") {
+		position: fixed;
+		top: 0;
+		right: 0;
+		left: 0;
+		z-index: 1000;
+		display: block;
 		padding-bottom: initial;
+		transition: all 0.3s ease-in-out;
+
+		&.scrolled {
+			display: flex;
+			align-items: center;
+			padding: 1rem 2rem;
+
+			>.content-wrapper {
+				display: block;
+				flex: auto;
+				margin: 0;
+			}
+
+			.site-branding {
+				max-width: fit-content;
+
+				img.site-logo {
+					max-height: 45px;
+				}
+			}
+
+			>.navigation-container {
+				flex: auto;
+			}
+
+			nav.main-navigation {
+				padding-top: 0;
+
+				.content-wrapper {
+					flex-wrap: nowrap;
+				}
+
+				ul#primary-menu li:nth-child(-n+4):not(.home) {
+					margin-right: 1%;
+				}
+
+				ul#primary-menu li:last-child {
+					display: none !important;
+				}
+			}
+
+			.nav-social {
+				flex-basis: initial;
+				max-width: initial;
+			}
+
+			.secondary-navigation {
+				display: none;
+			}
+		}
 	}
 
 	&.nav-down {
 		position: fixed;
 		top: 0;
-		transition: top 0.2s ease-in-out;
-
-		@include breakpoint("medium") {
-			position: relative;
-			top: initial;
-		}
 	}
 
 	&.nav-up {
@@ -35,21 +85,29 @@ header.site-header {
 		top: -101px;
 
 		@include breakpoint("medium") {
-			position: relative;
-			top: initial;
+			top: 0;
 		}
+	}
+
+	* {
+		transition: all 0.3s ease-in-out;
 	}
 
 	.site-branding {
 		padding: 0;
 		text-align: center;
+		transition: all 0.3s ease-in-out;
 
 		@include breakpoint("medium") {
+			max-height: 100%;
+			margin-left: 0;
 			text-align: left;
 		}
 
 		img.site-logo {
 			max-width: 90%;
+			max-height: 60px;
+			transition: all 0.3s ease-in-out;
 		}
 	}
 
@@ -62,7 +120,8 @@ header.site-header {
 		@include fontSize(13px);
 	}
 
-	.header-mobileContainer, .header-searchContainer {
+	.header-mobileContainer,
+	.header-searchContainer {
 		justify-content: center;
 		align-self: center;
 		@include fontSize(25px);
@@ -81,15 +140,18 @@ header.site-header {
 
 
 	/*----------  Navigation: Main Menu  ----------*/
-	
+
 	nav.main-navigation {
 		padding-top: 1rem;
 		padding-bottom: 0;
-
+		transform: translateX(0);
+		transition: all 0.3s ease-in-out;
+		
 		.content-wrapper {
 			width: 100%;
 			max-width: 100%;
 			padding: 0;
+			transition: all 0.3s ease-in-out;
 
 			@include breakpoint("medium") {
 				max-width: $size__container-max-width;
@@ -122,7 +184,7 @@ header.site-header {
 					top: 0 !important;
 					display: inline-block !important;
 					width: auto !important;
-					margin-right: 5% !important;
+					margin-right: 5%;
 					text-align: left !important;
 					border: 0 !important;
 					@include fontSize(17px);
@@ -144,11 +206,15 @@ header.site-header {
 					margin: 0;
 					padding: 0.25rem 0;
 					border-left: 1px solid $color__navigation-border;
+
+					@include breakpoint("medium") {
+						margin-right: 5%;
+					}
 				}
 
 				// Second Menu Item
 				&:nth-child(2) {
-					border:0 !important;
+					border: 0 !important;
 				}
 
 				// All Other Menu Items
@@ -188,14 +254,16 @@ header.site-header {
 	}
 
 	/*----------  Navigation: Secondary Menu  ----------*/
-	
+
 	nav.secondary-navigation {
 		position: relative;
 		top: -65px;
 		background-color: $light-gray;
+		transition: all 0.3s ease;
 
 		@include breakpoint("medium") {
 			top: 0;
+			display: block;
 			padding: 0.5rem 1rem 0.7rem;
 		}
 
@@ -264,7 +332,7 @@ header.site-header {
 
 			.icon-search:hover {
 				color: $bright-green;
-				cursor:pointer;
+				cursor: pointer;
 			}
 		}
 	}
@@ -373,7 +441,8 @@ header.site-header {
 					width: 15px;
 					height: 15px;
 
-					&::before, &::after {
+					&::before,
+					&::after {
 						background-color: $light-gray;
 					}
 				}
@@ -381,4 +450,3 @@ header.site-header {
 		}
 	}
 }
-
