Series remains in the nav when the header is scrolled at the large breakpoint

--- a/wp-content/themes/defense360/assets/_scss/layout/_header.scss
+++ b/wp-content/themes/defense360/assets/_scss/layout/_header.scss
@@ -71,6 +71,26 @@ header.site-header {
 		}
 	}
 
+	@include breakpoint("large") {
+		&.scrolled {
+			nav.main-navigation {
+				ul#primary-menu {
+					display: flex;
+					align-items: center;
+					justify-content: space-between;
+				}
+
+				ul#primary-menu li:nth-child(-n+4):not(.home) {
+					margin-right: 0;
+				}
+
+				ul#primary-menu li:last-child {
+					display: inline-block !important;
+				}
+			}
+		}
+	}
+
 	&.nav-down {
 		position: fixed;
 		top: 0;
