Search bar placement when header is scrolled

--- a/wp-content/themes/defense360/assets/_scss/layout/_header.scss
+++ b/wp-content/themes/defense360/assets/_scss/layout/_header.scss
@@ -68,6 +68,11 @@ header.site-header {
 			.header-ttIndex {
 				display: none;
 			}
+
+			.header-searchFormContainer {
+				top: calc(100% - 54px);
+				padding: 0.9rem 0.5rem;
+			}
 		}
 	}
 
