--- a/wp-content/themes/defense360/assets/_scss/base/_base.scss
+++ b/wp-content/themes/defense360/assets/_scss/base/_base.scss
@@ -3,6 +3,8 @@
 
 html {
 	box-sizing: border-box;
+	height: 100%;
+	margin: 0;
 }
 
 *,
@@ -13,6 +15,8 @@ html {
 }
 
 body {
+	height: 100%;
+	margin: 0;
 	/* Fallback for when there is no custom background color defined. */
 	background: $color__background-body;
 
@@ -21,13 +25,19 @@ body {
 	}
 }
 
+#page {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+}
+
 #content {
-	margin-top: 100px;
-	margin-bottom: 360px;
-	padding-top: 1px;
-	padding-bottom: 1px;
+	flex: 1;
 	background: $color__background-body;
-	box-shadow: 0 5px 8px -1px rgba(54, 96, 90, 0.5);
+
+	@include breakpoint("medium") {
+		padding-top: 2rem;
+	}
 }
 
 .content-wrapper {
