Adjust size of featured post on homepage

--- a/wp-content/themes/defense360/assets/_scss/pages/_home.scss
+++ b/wp-content/themes/defense360/assets/_scss/pages/_home.scss
@@ -10,6 +10,24 @@
 
 .home-container {
 
+	/*----------  Featured Post  ----------*/
+	.content-wrapper article.post:first-of-type {
+		@include breakpoint("large") {
+			.post-thumbnailContainer img {
+				max-height: 300px;
+				object-fit: cover;
+			}
+
+			.entry-title {
+				font-size: 1.75rem;
+			}
+
+			.entry-content {
+				font-size: 1.2rem;
+			}
+		}
+	}
+
 	/*----------  The Latest  ----------*/
 	.home-latestContainer {
 		@include breakpoint("medium") {
