Fix target so only the first post on the homepage has larger font

--- a/wp-content/themes/defense360/assets/_scss/pages/_home.scss
+++ b/wp-content/themes/defense360/assets/_scss/pages/_home.scss
@@ -11,7 +11,7 @@
 .home-container {
 
 	/*----------  Featured Post  ----------*/
-	.content-wrapper article.post:first-of-type {
+	.content-wrapper > article.post:first-of-type {
 		@include breakpoint("large") {
 			.post-thumbnailContainer img {
 				max-height: 300px;
