Move css comment to trigger change in WPE build

--- a/wp-content/themes/defense360/assets/_scss/base/_base.scss
+++ b/wp-content/themes/defense360/assets/_scss/base/_base.scss
@@ -17,8 +17,7 @@ html {
 body {
 	height: 100%;
 	margin: 0;
-	/* Fallback for when there is no custom background color defined. */
-	background: $color__background-body;
+	background: $color__background-body;	/* Fallback for when there is no custom background color defined. */
 
 	&.menu-mobile-active {
 		overflow-y: hidden;
